# vtkandroiddemo

./: README.md
JavaVTK2/app/: build.gradle
JavaVTK2/app/src/androidTest/java/com/kitware/JavaVTK/: ExampleInstrumentedTest.java
JavaVTK2/app/src/main/: AndroidManifest.xml
JavaVTK2/app/src/main/cpp/: CMakeLists.txt  auto_build_android.sh
JavaVTK2/app/src/main/res/values/: strings.xml
JavaVTK2/app/src/test/java/com/kitware/JavaVTK/: ExampleUnitTest.java
JavaVTK2/gradle/wrapper/: gradle-wrapper.properties
VTK3DEarth/app/src/main/: AndroidManifest.xml
VTK3DEarth/app/src/main/cpp/: main.cxx
VolumeRender/: local.properties
VolumeRender/app/: build.gradle
VolumeRender/app/src/androidTest/java/kitware/com/volumerender/: ExampleInstrumentedTest.java
VolumeRender/app/src/main/: AndroidManifest.xml
VolumeRender/app/src/main/cpp/: CMakeLists.txt  main.cxx
VolumeRender/app/src/main/java/kitware/com/volumerender/: MainActivity.java  VolumeRenderActivity.java  (+2 more)
VolumeRender/app/src/main/res/values/: strings.xml
VolumeRender/gradle/wrapper/: gradle-wrapper.properties
demo1/: local.properties
demo1/app/: build.gradle
demo1/app/src/main/: AndroidManifest.xml
demo1/app/src/main/cpp/: CMakeLists.txt  com_michaelapp_demo1_JavaNativeLib.h  generateJNI.bat
demo1/app/src/main/res/layout/: activity_main.xml
demo1/app/src/main/res/values/: strings.xml
demo1cpp/: CMakeLists.txt  native-lib.cpp
demo1cppn/: com_michaelapp_demo1_JavaNativeLib.cpp
demo1native/: CMakeLists.txt  cmake1.cpp
vtkandroid/: auto_build_android.sh  auto_build_clean.sh  readme.md
(+5 files in other folders)
